# hri2021-pdf-downloader

./: README.md  pyproject.toml  script.py
docs/: index.html  script.html
